
2020-06-15  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: fixed missing use of AS_IF
	* Makefile.am: include possibly transformed program names to defaults.h

2020-06-11  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: use pkg-config for GMP and MPIR
	* Makefile.am: build extras before documentation
	* m4/m4_ax_check_define.m4: renamed to m4/ax_check_define.m4
	* m4/m4_ax_code_coverage.m4: renamed to m4/ax_code_coverage.m4
	* m4/fcntl-o.m4, m4/gettext.m4, m4/iconv.m4, m4/intdiv0.m4, m4/intl.m4,
	  m4/intlmacosx.m4, m4/nls.m4, m4/po.m4, m4/progtest.m4, m4/size_max.m4,
	  m4/visibility.m4: Upgrade to gettext-runtime-0.20.2.

2020-06-10  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: Bug #644 (MacOS) check for declaration of fdatasync
	* Makefile.am: build extras before documentation

2020-05-03  Simon Sobisch <simonsobisch@gnu.org>

	* DEPENDENCIES: new file, moved out of README
	* Makefile.am, gnucobol.spec, HACKING: adjusted for new DEPENDENCIES

2020-04-17  Simon Sobisch <simonsobisch@gnu.org>

	* gnucobol.spec: minor cleanup

2020-04-16  Edward Hart <edward.dan.hart@gmail.com>

	* configure.ac: fixed cleaning of COB_CFLAGS again (see Patches #49).

2020-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: new check for MAKE supporting order-only prerequisites
	  resulting in new conditional MAKE_HAS_PREREQ_ONLY

2020-03-09  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: FR #372 new option --with-math to specify multiple
	  precision library used (may have the value gmp or mpir or check);
	  in case of MPIR (or not found GMP) checks for mpir.h (HAVE_MPIR_H)
	  and libmpir; in general: check header first, then library

2020-03-01  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: adjusted generation of built-in COB_LDFLAGS

2020-02-02  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: document the existing environment vars LIBCOB_CPPFLAGS,
	  LIBCOB_LIBS and COBC_LIBS and test if those actually work
