@@ -120,9 +120,14 @@ $(tarstamps):
 	  echo "#define COB_NUM_TAR_TIME ` LC_ALL=C date -u +'%H%M%S'`"; \
 	} > $@
 
+# TODO: possibly disable / adjust depending on what
+#       configure.ac founds (currently not checked there)
+vcs-update:
+	svn update $(srcdir)
+
 
 # targets that are only logical targets and should always be executed
-.PHONY: test checkall checkmanual
+.PHONY: test checkall checkmanual vcs-update
 
 test: all
 	cd tests && $(MAKE) $(AM_MAKEFLAGS) test
