@@ -1,4 +1,8 @@
 
+2020-06-28  Simon Sobisch <simonsobisch@gnu.org>
+
+	* Makefile.am: include PROGRAMS_LIBS
+
 2020-06-26  Simon Sobisch <simonsobisch@gnu.org>
 
 	* pplex.l: allow more characters in $DISPLAY
